Fix loading of files with 'Box' transformation filter

Summary:
We have released Krita with new name for the Box filter,
so now we have two variants for the name of this filer,
which is used in different places.

This patch adds aliases support for KoGenericRegistry and
makes 'Box' to be a variant for 'NearestNeighbour'

BUG:395979

Test Plan:
0) Add the following section to kritarc
```
[KisToolTransform]
filterId=Box
```
1) Start Krita
2) Krita shouldn't crash
3) Also try for other filter ids: Bicubic, NearestNeighbor, Bilinear

Reviewers: #krita, rempt

Tags: #krita

Differential Revision: https://phabricator.kde.org/D13796